--- a/requirements_docs.txt
+++ b/requirements_docs.txt
@@ -1,31 +1,31 @@
 -r requirements.txt
 -r requirements_testing.txt
 
-Sphinx==4.0.2
-sphinx-autodoc-typehints==1.12.0
-sphinx-rtd-theme==0.5.2
-sphinx-tabs==3.0.0
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-bibtex==2.2.1
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==1.0.3
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-napoleon==0.7
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.4
-ipykernel==5.5.4
-ipython==7.23.1
-ipython-genutils==0.2.0
-ipywidgets==7.6.3
-jupyter-client==6.1.12
-jupyter-core==4.7.1
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.0
-nbclient==0.5.3
-nbconvert==6.0.7
-nbformat==5.1.3
-nbsphinx==0.8.5
-nbsphinx-link==1.3.0
-notebook>=6.4.1
-rstcheck==3.3.1
-widgetsnbextension==3.5.1
+Sphinx
+sphinx-autodoc-typehints
+sphinx-rtd-theme
+sphinx-tabs
+sphinxcontrib-applehelp
+sphinxcontrib-bibtex
+sphinxcontrib-devhelp
+sphinxcontrib-htmlhelp
+sphinxcontrib-jsmath
+sphinxcontrib-napoleon
+sphinxcontrib-qthelp
+sphinxcontrib-serializinghtml
+ipykernel
+ipython
+ipython-genutils
+ipywidgets
+jupyter-client
+jupyter-core
+jupyterlab-pygments
+jupyterlab-widgets
+nbclient
+nbconvert
+nbformat
+nbsphinx
+nbsphinx-link
+notebook
+rstcheck
+widgetsnbextension
