docs(reference): enable autodoc for API reference

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -36,61 +36,56 @@ html:
 #  binderhub_url: "https://mybinder.org"
 
 sphinx:
-  # extra_extensions:
-  #   - sphinx.ext.intersphinx
-  #   - sphinx.ext.autosummary        # generate summary tables of functions in modules
-  #   - sphinx.ext.napoleon           # recognize NumPy style docstrings
-  #   - sphinx.ext.viewcode           # add links to source code in API reference
-  #   - hoverxref.extension
+  extra_extensions:
+    - sphinx.ext.intersphinx
+    - sphinx.ext.autosummary        # generate summary tables of functions in modules
+    - sphinx.ext.napoleon           # recognize NumPy style docstrings
+    - sphinx.ext.viewcode           # add links to source code in API reference
+    - hoverxref.extension
 
   config:
     exclude_patterns: ['_build', '_templates']
     suppress_warnings: ["etoc.toctree"]
     #autosummary_generate: True      # autosummary generates module-level .rst files?
     add_module_names: False         # Don't include module names in autosummary tables
-    autosummary_imported_members: True
+    autosummary_imported_members: False
     autosummary_ignore_module_all: False
     autodoc_default_options: {
      "members": True,                # Include module/class members.
      "member-order": 'bysource',     # Order members as in source file.
     }
     # templates_path: ['_templates']  # Path(s) that contain templates, relative to this config
-    exclude_patterns: ['_build', '_templates']
-    # intersphinx_mapping:
-    #     python:
-    #       - 'https://docs.python.org/3/'
-    #       - null
-    #     numpy [stable]:
-    #       - 'https://numpy.org/doc/stable/'
-    #       - null
-    #     matplotlib [stable]:
-    #       - 'https://matplotlib.org/stable/'
-    #       - null
-    #     pandas [latest?]:
-    #       - 'https://pandas.pydata.org/docs/'
-    #       - null
-    #     scipy [latest]:
-    #       - 'https://docs.scipy.org/doc/scipy/'
-    #       - null
-    #     pillow [latest]:
-    #       - 'https://pillow.readthedocs.io/en/latest/'
-    #       - null
-    # suppress_warnings: ["etoc.toctree"]
+    intersphinx_mapping:
+        python:
+          - 'https://docs.python.org/3/'
+          - null
+        numpy [stable]:
+          - 'https://numpy.org/doc/stable/'
+          - null
+        matplotlib [stable]:
+          - 'https://matplotlib.org/stable/'
+          - null
+        pandas [latest?]:
+          - 'https://pandas.pydata.org/docs/'
+          - null
+        scipy [latest]:
+          - 'https://docs.scipy.org/doc/scipy/'
+          - null
 
-    # # Hoverxref Extension
-    # hoverxref_auto_ref: True
-    # hoverxref_intersphinx: [
-    #     "python",
-    #     "numpy",
-    #     "matplotlib",
-    #     "scipy",
-    # ]
-    # hoverxref_domains: ["py", "numpy", "matplotlib", "scipy"]
-    # hoverxref_role_types: {
-    #     "hoverxref": "modal",
-    #     "ref": "modal",  # for hoverxref_auto_ref config
-    #     "mod": "tooltip",
-    #     "class": "tooltip",
-    #     "func": "tooltip",
-    #     "obj": "tooltip"
-    # }
+    # Hoverxref Extension
+    hoverxref_auto_ref: True
+    hoverxref_intersphinx: [
+        "python",
+        "numpy",
+        "matplotlib",
+        "scipy",
+    ]
+    hoverxref_domains: ["py", "numpy", "matplotlib", "scipy"]
+    hoverxref_role_types: {
+        "hoverxref": "modal",
+        "ref": "modal",  # for hoverxref_auto_ref config
+        "mod": "tooltip",
+        "class": "tooltip",
+        "func": "tooltip",
+        "obj": "tooltip"
+    }
