--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -15,9 +15,9 @@ parts:
     # - file: topic_guides/normalization_ODOG
     # - file: topic_guides/normalization_LODOG
     # - file: topic_guides/normalization_FLODOG
-  # - caption: Reference
-  #   chapters:
-  #   - file: reference/api.md
+  - caption: Reference
+    chapters:
+    - file: reference/api.md
   - caption: Get in touch
     chapters:
     - file: contributing/get_in_touch
