docs: minimal working Jupyter Book build
Reorganize into tutorials, how-tos, topic guides, references
Update installation page
Add contributing information
Placeholder for API reference
Placeholder(s) for Notebooks (tutorials, demos)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,34 +25,11 @@ dependencies = ["numpy", "scipy", "matplotlib", "Pillow"]
 [project.optional-dependencies]
 dev = ["pytest", "black", "pyupgrade", "flake8"]
 docs = [
-    "Sphinx",
-    "sphinx-autodoc-typehints",
-    "sphinx-rtd-theme",
-    "sphinx-tabs",
-    "sphinxcontrib-applehelp",
-    "sphinxcontrib-bibtex",
-    "sphinxcontrib-devhelp",
-    "sphinxcontrib-htmlhelp",
-    "sphinxcontrib-jsmath",
-    "sphinxcontrib-napoleon",
-    "sphinxcontrib-qthelp",
-    "sphinxcontrib-serializinghtml",
-    "ipykernel",
-    "ipython",
-    "ipython-genutils",
-    "ipywidgets",
-    "jupyter-client",
-    "jupyter-core",
-    "jupyterlab-pygments",
-    "jupyterlab-widgets",
-    "nbclient",
-    "nbconvert",
-    "nbformat",
-    "nbsphinx",
-    "nbsphinx-link",
-    "notebook",
-    "rstcheck",
-    "widgetsnbextension",
+    "jupyter-book",
+    "jupytext>=1.13.3",
+    "jupyterlab_myst",
+    "myst_nb",
+    "sphinx-hoverxref",
 ]
 
 [project.urls]
