--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -5,10 +5,10 @@ title: multyscale
 author: Joris Vincent
 logo: logo.png
 
-# Force re-execution of notebooks on each build.
+# Cache execution of notebooks
 # See https://jupyterbook.org/content/execute.html
 execute:
-  execute_notebooks: force
+  execute_notebooks: cache
   timeout: 300
 
 # Define the name of the latex output file for PDF builds
