docs: add generalized normalization to TOC

--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -29,6 +29,7 @@ parts:
     - file: normalization/normalization_FLODOG
       sections:
       - file: normalization/explore_FLODOG_parameters
+    - file: normalization/normalization_generalized
   # - caption: Decoding
   #   numbered: False
   - caption: Reference
